Modificaciones para corrección de errores, referencias antiguas a Promo54

--- a/WebContent/login.zul
+++ b/WebContent/login.zul
@@ -1,4 +1,4 @@
-<?page title="Promo 54"?>
+<?page title="FANCA"?>
 
 <?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
 <?link href="resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
