--- a/WebContent/resources/css/componentesZK.css
+++ b/WebContent/resources/css/componentesZK.css
@@ -120,8 +120,8 @@
     max-width: 122px;
     vertical-align: middle;
     color: #87796F !important;
+    min-width: 190px;
 }
-
 .sidebar-collapse > a [class*="z-icon"] {
     display: inline-block;
     font-size: 14px;
