--- a/WebContent/resources/css/theme.css
+++ b/WebContent/resources/css/theme.css
@@ -332,7 +332,7 @@ a:focus {
   position: relative;
 }
 .nav-list.z-navbar > ul > li.z-nav-open {
-  border-top: 1px solid #FCFCFC;
+  border-top: 1px solid #ecf1bc;
   border-bottom: 1px solid #E5E5E5;
 }
 .nav-list.z-navbar > ul > li:first-child,
@@ -605,18 +605,19 @@ a:focus {
 .shortcuts-collapsed:HOVER i {
 	color: #26A69A;
 }
-.z-nav-text-popup,
-.z-navitem-text-popup {
-  width: 174px;
-  height: 40px;
-  min-width: 174px;
-  line-height: 38px;
-  background-color: #f5f5f5;
-  -webkit-box-shadow: 2px 1px 2px 0 rgba(0,0,0,0.2);
-  box-shadow: 2px 1px 2px 0 rgba(0,0,0,0.2);
-  border: 1px solid #dddddd;
-  padding: 0 0 0 12px;
+
+.z-nav-text-popup, .z-navitem-text-popup {
+    width: 174px;
+    height: 40px;
+    min-width: 174px;
+    line-height: 38px;
+    background-color: #f0f2dc;
+    -webkit-box-shadow: 2px 1px 2px 0 rgba(0,0,0,0.2);
+    box-shadow: 2px 1px 2px 0 rgba(0,0,0,0.2);
+    border: 1px solid #dddddd;
+    padding: 0 0 0 12px;
 }
+
 .z-nav-text-popup {
   border-top-color: #e5e5e5;
   border-left-color: #e5e5e5;
@@ -633,11 +634,12 @@ a:focus {
   box-shadow: 2px 1px 2px 0 rgba(0,0,0,0.2);
   padding-bottom: 2px;
 }
-.z-nav-popup .z-nav > .z-nav-content,
+.z-nav-popup .z-nav > .z-nav-content, 
 .z-nav-popup .z-navitem > .z-navitem-content {
-  border-width: 1px 0 0 0;
-  background-color: #ffffff;
+    border-width: 1px 0 0 0;
+    background-color: #F0F2DC;
 }
+
 .nav-list.z-navbar > ul > .z-nav > ul,
 .z-nav-popup {
   position: relative;
