--- a/WebContent/resources/materialize/css/materialize.css
+++ b/WebContent/resources/materialize/css/materialize.css
@@ -10282,7 +10282,7 @@ select {
 }
 
 .side-nav li:hover, .side-nav li.active {
-	background-color: #ddd;
+    background-color: #f0f2dc;
 }
 
 .side-nav a {
