--- a/WebContent/resources/css/portal/galeriaMain.css
+++ b/WebContent/resources/css/portal/galeriaMain.css
@@ -1,22 +1,17 @@
-.galeria {
-	background: #87796f;
-	color: #ffffff;
-}
-
 .galeria .row {
 	margin-bottom: 0;	
 }
 
 .galeria h4 {
-	font-size: 1.2em;
-	font-weight: bold;
-	text-align: center;
-	text-transform: uppercase
+	background: #87796f;
+	color: #ffffff;
+	margin: 0;
+	padding: 15px 0;
 }
 
 .galeria .seccion {
 	background: url("../../../imagenes/portal/fondo-body2.png") no-repeat;
-	height: 250px;
+	height: 450px;
 	padding: 30px;
 }
 
@@ -25,12 +20,9 @@
 	width: 80%;
 }
 
-.seccion img {
+.galeria .seccion img {
+	margin-top: 30px;
+	height: 120px;
 	width: 300px;
 	border: 4px solid #87796f
-}
-
-.seccion .fotos button {
-	margin-top: 35px;
-	background: #8ac7de;
 }
