--- a/WebContent/vista/portal/conocenosMain.zul
+++ b/WebContent/vista/portal/conocenosMain.zul
@@ -4,53 +4,54 @@
 <zk xmlns:n="native" xmlns:w="client">
 
 	<div 	style="width: 100%;
-	    height: 450px;
+	    height: 480px;
    		background-color: #F0F2DC;">
-		<div class="row">
-			<div class="col s4" style=" padding-left: 160px;">  
-     			<n:br></n:br>
-	        	<image src="/imagenes/portal/icon/icon-goa.png"
-					style="max-width:205px; max-height:205px; padding-left: 68px;">
-   				</image>   
-	         	<n:h6 style="padding-top: 18px; color: #87796F; padding-left: 110px;font-weight: bold"  >FANCA</n:h6>
-         		<n:br></n:br>  
-	         	<n:p>This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
-	         		This option requires little to no setup. Use this if you are unfamiliar with Sass.
-	            	This option requires little to no setup. Use this if you are unfamiliar with Sass.
-	               This option requires little to no setup. Use this if you are unfamiliar with Sass.
-	         	</n:p>		
-	      	</div>	  
-	      	<div class="col s4" style=" padding-left: 82px; padding-right:82px" > 
-			    <n:br></n:br> 
-			    <image src="/imagenes/portal/icon/icon-goals.png"
-					style="max-width:185px; max-height:185px ;padding-left: 84px" >
-			   	</image>
-		      	<n:h6 style="padding-top: 18px; color: #87796F; padding-left: 110px;font-weight: bold"  >MISION</n:h6>
-			    <n:br></n:br>
-			    <n:p>This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
-		        	This option requires little to no setup. Use this if you are unfamiliar with Sass.
-		            This option requires little to no setup. Use this if you are unfamiliar with Sass.
-	               	This option requires little to no setup. Use this if you are unfamiliar with Sass.</n:p>
-			</div>  
-	      	<div class="col s4" style=" padding-right: 160px;">
-      			<n:br></n:br>
-	         	<image src="/imagenes/portal/icon/icon-med.png"
-					style="max-width:330px; max-height:330px; padding-left: 25px;">
-		     	</image>  
-	         	<n:h6 style="padding-top: 18px; color: #87796F;padding-left: 100px;font-weight: bold">VISION</n:h6>
-	        	<n:br></n:br>
-		        <n:p>This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
-		    	    This option requires little to no setup. Use this if you are unfamiliar with Sass.
-	            	This option requires little to no setup. Use this if you are unfamiliar with Sass.
-					This option requires little to no setup. Use this if you are unfamiliar with Sass.</n:p>
-		  	</div>
-  			<div class="col s12">
-				<n:h6  style="color: #F2707D;padding-left: 160px;padding-right: 160px; font-weight: bold">This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
-					This option requires little to no setup. Use this if you are unfamiliar with Sass.
-				   	This option requires little to no setup. Use this if you are unfamiliar with Sass.
-					This option requires little to no setup. Use this if you are unfamiliar with Sass.
-				</n:h6>
-			</div>	
+   		<div class="container-fluid">
+			<div class="row" style="width: 70%;">
+				<div class="col s4 text-center">  
+	     			<n:br></n:br>
+		        	<image src="/imagenes/portal/icon/icon-people-grande.png"
+						style="height:140px;">
+	   				</image>   
+		         	<n:h6 style="padding-top: 18px; color: #87796F; font-weight: bold; text-transform: uppercase;"  >Fanca</n:h6>
+	         		<n:br></n:br>  
+		         	<n:p>This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
+		         		This option requires little to no setup. Use this if you are unfamiliar with Sass.
+		            	This option requires little to no setup. Use this if you are unfamiliar with Sass.
+		               This option requires little to no setup. Use this if you are unfamiliar with Sass.
+		         	</n:p>		
+		      	</div>	  
+		      	<div class="col s4 text-center">  
+				    <n:br></n:br> 
+				    <image src="/imagenes/portal/icon/icon-goals-grande.png"
+						style="height: 140px" >
+				   	</image>
+			      	<n:h6 style="padding-top: 18px; color: #87796F; font-weight: bold; text-transform: uppercase;"  >Misión</n:h6>
+				    <n:br></n:br>
+				    <n:p>This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
+			        	This option requires little to no setup. Use this if you are unfamiliar with Sass.
+			            This option requires little to no setup. Use this if you are unfamiliar with Sass.
+		               	This option requires little to no setup. Use this if you are unfamiliar with Sass.</n:p>
+				</div>  
+		      	<div class="col s4 text-center">
+	      			<n:br></n:br>
+		         	<image src="/imagenes/portal/icon/icon-medical-grande.png"
+						style="height:140px;">
+			     	</image>  
+		         	<n:h6 style="padding-top: 18px; color: #87796F; font-weight: bold; text-transform: uppercase;">Visión</n:h6>
+		        	<n:br></n:br>
+			        <n:p>This is the standard version that comes with both the minified and unminified CSS and JavaScript files. 
+			    	    This option requires little to no setup. Use this if you are unfamiliar with Sass.
+		            	This option requires little to no setup. Use this if you are unfamiliar with Sass.
+						This option requires little to no setup. Use this if you are unfamiliar with Sass.</n:p>
+			  	</div>
+	  			<div class="col s12 text-center">
+					<n:h5  style="color: #F2707D; font-weight: bold">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus at officiis amet 
+						corporis repellendus totam maxime, quod, itaque quam
+					</n:h5>
+				</div>	
+			</div>
 		</div>
 	</div>	
 </zk>
