--- a/WebContent/vista/portal/eventosMain.zul
+++ b/WebContent/vista/portal/eventosMain.zul
@@ -2,50 +2,54 @@
 <?link href="/resources/css/portal/eventosMain.css" rel="stylesheet" type="text/css"?>
 
 <zk xmlns:n="native" xmlns:w="client">
-	<div class="container-fluid">
+	<div class="container-fluid eventos">
 		<div class="row">
-			<div class="cabecera vcenter titulo text-center">
-				<n:b>Eventos</n:b>
+			<div class=" vcenter text-center">
+				<n:h4>Eventos</n:h4>
 			</div>
-			<div class="col s4">
-				<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-carrera.png" width="128px" height="128px"></image>
-				<n:br></n:br>
-				<div class="subtitulo text-center">
-           			<n:p>Carrera</n:p><n:br></n:br>
-       			</div>
-       			<div class="info">
-		            <n:b>Fecha:</n:b> 02/05/2016<n:br></n:br>
-		            <n:b>Lugar:</n:b> Hotel Príncipe<n:br></n:br>
-		            <n:b>Descripción:</n:b> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
-          		</div>
+			<div class="col s12 seccion">
+				<div class="col s4">
+					<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-carrera.png" width="128px" height="128px"></image>
+					<n:br></n:br>
+					<div class="subtitulo text-center">
+	           			<n:p>Carrera</n:p>
+	       			</div>
+	       			<div class="info">
+			            <n:b>Fecha:</n:b> 02/05/2016<n:br></n:br>
+			            <n:b>Lugar:</n:b> Hotel Príncipe<n:br></n:br>
+			            <n:b>Descripción:</n:b> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+	          		</div>
+				</div>
+				<div class="col s4">
+					<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-vendimia.png" width="128px" height="128px"></image>					
+					<n:br></n:br>
+					<div class="subtitulo text-center">
+	           			<n:p>Vendimia</n:p>
+	       			</div>
+	       			<div class="info">
+			            <n:b>Fecha:</n:b> 02/05/2016<n:br></n:br>
+			            <n:b>Lugar:</n:b> Hotel Príncipe<n:br></n:br>
+			            <n:b>Descripción:</n:b> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+		          	</div>
+				</div>
+				<div class="col s4">
+					<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-bingo.png" width="128px" height="128px"></image>
+					<n:br></n:br>
+					<div class="subtitulo text-center">
+	           			<n:p>Bingo</n:p>
+	       			</div>
+	       			<div class="info">
+			            <n:b>Fecha:</n:b> 02/05/2016<n:br></n:br>
+			            <n:b>Lugar:</n:b> Hotel Príncipe<n:br></n:br>
+			            <n:b>Descripción:</n:b> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+		          	</div>
+				</div>
 			</div>
-			<div class="col s4">
-				<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-vendimia.png" width="128px" height="128px"></image>					
-				<n:br></n:br>
-				<div class="subtitulo text-center">
-           			<n:p>Vendimia</n:p><n:br></n:br>
-       			</div>
-       			<div class="info">
-		            <n:b>Fecha:</n:b> 02/05/2016<n:br></n:br>
-		            <n:b>Lugar:</n:b> Hotel Príncipe<n:br></n:br>
-		            <n:b>Descripción:</n:b> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
-	          	</div>
+			<div class="col s12">
 	          	<div class="boton text-center">
-           			<button type="button" class="btn btn-info">Ver más</button>
-       			</div>
-			</div>
-			<div class="col s4">
-				<image class="img-responsive center-block" src="/imagenes/portal/icon/icon-bingo.png" width="128px" height="128px"></image>
-				<n:br></n:br>
-				<div class="subtitulo text-center">
-           			<n:p>Bingo</n:p><n:br></n:br>
-       			</div>
-       			<div class="info">
-		            <n:b>Fecha:</n:b> 02/05/2016<n:br></n:br>
-		            <n:b>Lugar:</n:b> Hotel Príncipe<n:br></n:br>
-		            <n:b>Descripción:</n:b> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
-	          	</div>
-			</div>
+        			<button type="button" class="waves-effect waves-light btn">Ver más</button>
+    			</div>
+    		</div>
 		</div>
 	</div>
 </zk>
