--- a/WebContent/vista/portal/main.zul
+++ b/WebContent/vista/portal/main.zul
@@ -1,4 +1,4 @@
-<?page title="FANCA - Contáctanos" contentType="text/html;charset=UTF-8"?>
+<?page title="FANCA" contentType="text/html;charset=UTF-8"?>
 <?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
 <?link href="/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/materialize_v0.97.5/css/materialize.min.css" rel="stylesheet" type="text/css"?>
