--- a/WebContent/vista/portal/noticia.zul
+++ b/WebContent/vista/portal/noticia.zul
@@ -35,10 +35,10 @@
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  text-align: center;
+  text-align: justify;
 }
 .owl-theme .owl-controls .owl-buttons div {
-  padding: 5px 9px;
+  padding: 5px 40px;
 }
  
 .owl-theme .owl-buttons span{
@@ -52,23 +52,23 @@
 }
  
 .owl-theme .owl-controls .owl-buttons .owl-prev{
-  left: -45px;
-  top: 55px; 
+  left: -44px;
+  top: 50px; 
       position: absolute;
 }
  
 .owl-theme .owl-controls .owl-buttons .owl-next{
-  right: -45px;
-  top: 55px;
+  right: -118px;
+  top: 45px;
       position: absolute;
 }
 
 .owl-carousel {
     display: none;
     position: relative;
-    width: 80%;
+    width: 95%;
     -ms-touch-action: pan-y;
-    margin-left: 5%;
+    margin-left: 1%;
 }
  
 
@@ -85,72 +85,54 @@
 			NOTICIAS
 		</n:h5>
 	</div>
-	<div>
-
-
-	</div>
-	<div sclass="container">
-		<div sclass="carousel slide">
-			<n:ol class="carousel-indicators">
-				<n:li class="active"></n:li>
-				<n:li></n:li>
-				<n:li></n:li>
-
-			</n:ol>
-			<div>
-
-			</div>
-			<div sclass="carousel-inner">
-				<div sclass="item active"
-					style="width: 70%;  margin-left: 15%; margin-top: 4%;">
-					<div style="padding-bottom: 10px;">
-						<label
-							style="color: #f26b7a; font-weight: bold;"
-							value="TITULO DE LA NOTICIA">
-						</label>
-					</div>
-					<label
-						value="Note: Carousels are not supported properly in Internet Explorer 9 and earlier (because they use CSS3 transitions and animations to achieve the slide effect). ">
-					</label>
-
-				</div>
-			</div>
-			<a sclass="left carousel-control">
-				<span sclass="glyphicon glyphicon-chevron-left"></span>
-			</a>
-			<a sclass="right carousel-control">
-				<span sclass="glyphicon glyphicon-chevron-right"></span>
-			</a>
-		</div>
-	</div>
+	
 	<div sclass="row">
+	<div sclass="col s10">
 		<n:div id="owlDemo" sclass="owl-carousel owl-theme">
 
-			<div sclass="item">
-				
+			<div sclass="item" width="95%" style="margin-left: 5%;">
+				<div style="padding-bottom: 10px;">
+						<label
+							style="color: #f26b7a; font-weight: bold;"
+							value="LOREM IPSUN DOLOR">
+						</label>
+					</div>
+					
 					<label
-						value ="Note: Carousels are not supported properly in
-						Internet Explorer 9 and earlier (because they
-						use CSS3 transitions and animations to achieve
-						the slide effect).">
+						value ="Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en l">
 					</label>
 				</div>
-			<div sclass="item">
-				
-					<label value ="Note: Carousels are not supported properly in
-						Internet Explorer 9 and earlier (because they
-						use CSS3 transitions and animations to achieve
-						the slide effect).">
+			<div sclass="item" width="95%" style="margin-left: 5%;">
+				<div style="padding-bottom: 10px;">
+						<label
+							style="color: #f26b7a; font-weight: bold;"
+							value="SED UT PERSPICIATI">
+						</label>
+					</div>
+					<label value ="Reina en mi espíritu una alegría admirable, muy parecida a las dulces alboradas de la primavera, de que gozo aquí con delicia. Estoy solo, y me felicito de vivir en este país, el más a propósito para almas como la mía, soy tan dichoso, mi querido amigo, me sojuzga de tal modo la idea de reposar, que no me ocupo de mi arte. Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin e">
 					</label>
 				</div>
-			
+			<div sclass="item" width="95%" style="margin-left: 5%;">
+				<div style="padding-bottom: 10px;">
+						<label
+							style="color: #f26b7a; font-weight: bold;"
+							value="REINA EN MI ESPIRITUu">
+						</label>
+					</div>
+					<label value ="Quiere la boca exhausta vid, kiwi, piña y fugaz jamón. Fabio me exige, sin tapujos, que añada cerveza al whisky. Jovencillo emponzoñado de whisky, ¡qué figurota exhibes! La cigüeña tocaba cada vez mejor el saxofón y el búho pedía kiwi y queso. El jefe buscó el éxtasis en un imprevisto baño de whisky">
+					</label>
+				</div>
 
 		</n:div>
-		
+		</div>
+		<div class="col s2 text-center ">
+					<button class="waves-effect waves-light btn" style="background-color: #8ac7de; margin-top: 25%;">
+						ver mas
+					</button>
+				</div>	
 		
 	</div>
 
-	
 <n:script type="text/javascript">
 		
 
@@ -162,9 +144,9 @@ $(document).ready(function() {
       slideSpeed : 300,
       paginationSpeed : 400,
       singleItem:true,
-navigationText: [
-      '<label sclass='fa-user fa'></label>',
-    '<label sclass='fa-user fa'></label>'
+	navigationText: [
+      '<span sclass="fa fa-chevron-left"></span>',
+    '<span sclass="fa fa-chevron-right"></span>'
       ],
       // "singleItem:true" is a shortcut for:
       // items : 1, 
