--- a/WebContent/vista/portal/main.zul
+++ b/WebContent/vista/portal/main.zul
@@ -15,6 +15,14 @@
 <?link href="/resources/css/portal/eventosMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/participaMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
+<?link href="/resources/css/portal/noticiasMain.css" rel="stylesheet" type="text/css"?>
+
+
+<?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
+<?link href="/resources/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css"?>
+<?link href="/resources/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css"?>
+
+<?script src="/resources/owl-carousel/owl.carousel.js"?>
 
 
 
@@ -25,9 +33,39 @@
 <?script src="/resources/js/fullScreenApi.js"?>
 <?script src="/resources/js/index.js"?>
 <zk xmlns:n="native" xmlns:w="client">
+	<div class="social">
+		<div style="padding: 0px;">
+			<div>
+				<a href="#" sclass="icon" iconSclass="fa fa-home ">
+					<span>Inicio</span>
+				</a>
+			</div>
+			<div>
+				<a href="#conocenos" sclass="icon" iconSclass="fa fa-bank "></a>
+			</div>
+			<div>
+				<a href="#galeria" sclass="icon" iconSclass="fa fa-picture-o"></a>
+			</div>
+			<div>
+				<a href="#" sclass="icon" iconSclass="fa fa-user"></a>
+			</div>
+			<div>
+				<a href="#" sclass="icon" iconSclass="fa fa-user"></a>
+			</div>
+		</div>
+	</div>
+
 	<include src="/vista/portal/navbar.zul"></include>
-	<include src="/vista/portal/conocenosMain.zul"></include>
-	<include src="/vista/portal/galeriaMain.zul"></include>
+	<div class="container-fluid">
+		<image class="responsive-img" src="/imagenes/portal/web-banner.png"></image>
+	</div>
+	<include src="/vista/portal/noticia.zul"></include>
+	<n:div id="conocenos">
+		<include src="/vista/portal/conocenosMain.zul"></include>
+	</n:div>
+	<n:div id="galeria">
+		<include src="/vista/portal/galeriaMain.zul"></include>
+	</n:div>
 	<div class="container-fluid"  >
 		<div class="row">
 			<div class="col s6 eventos">
