--- a/WebContent/resources/css/portal/contactanos.css
+++ b/WebContent/resources/css/portal/contactanos.css
@@ -28,6 +28,36 @@
 	background-repeat: no-repeat;
 }
 
+.contact-map {
+	max-width: 100%;
+	width: 1680px;
+	height: 555px;
+	padding-top: 0px;
+}
+
+.banner-organizacion {
+	height: 200px;
+	width: 100%;
+	position: relative !important;
+}
+
+.org-contenedor-contenido {
+	z-index: 2;
+	top: 33em;
+	-webkit-box-shadow: 0 0 1px #999;
+	-moz-box-shadow: 0 0 1px #999;
+	box-shadow: 0 0 5px 1px #999;
+	padding: 0px;
+	background: #F0F2DC !important;
+}
+
+.org-contenedor-banner {
+	position: absolute;
+	width: 100%;
+	height: 708px;
+	background-repeat: no-repeat;
+}
+
 .org-contenedor-texto {
 	position: relative;
 	width: 100%;
@@ -64,4 +94,39 @@
 .tituloSeccion span {
 	color: #F0F2DC;
 	font-size: 20px !important;
+}
+
+.textoContacto {
+	font-family: 'Roboto', sans-serif;
+	font-size: 15px !important;
+	font-weight: 500;
+	color: #87796f;
+}
+
+.textoDatos {
+	color: #87796f;
+}
+
+.twitter {
+	background-color: #55acee;
+	margin-top: 50px;
+	margin-bottom: 35px;
+}
+
+.facebook {
+	background-color: #3B5998;
+	margin-top: 50px;
+	margin-bottom: 35px;
+}
+
+.instagram {
+	background-color: #125688;
+	margin-top: 50px;
+}
+
+.containerRedes {
+	color: white;
+	height: 44px;
+	width: 265px;
+	font-size: 20px;
 }
