--- a/WebContent/vista/portal/galeriaMain.zul
+++ b/WebContent/vista/portal/galeriaMain.zul
@@ -36,7 +36,7 @@
 					</div>
 				</div>	
 				<div class="col s12 text-center">
-					<button class="waves-effect waves-light btn">
+					<button class="waves-effect waves-light btn" href="./galeria.zul">
 						ver mas
 					</button>
 				</div>			
