--- a/WebContent/resources/css/portal/eventos.css
+++ b/WebContent/resources/css/portal/eventos.css
@@ -18,3 +18,42 @@
 .imagen {
 	background-color: #F0F2DC;
 }
+
+.fc-content{
+	background: #fff;
+}
+
+.fc-header-center{
+ color: #fff;
+}
+
+.fc-button-next{
+	background: transparent !important;
+    float: right;
+    color: #fff !important;
+}
+
+.fc-button-prev{
+	background: transparent !important;
+    float: left;
+    color: #fff !important;
+}
+
+.fc-text-arrow {
+    margin: 0;
+    font-size: 24px;
+    line-height: 18px;
+    }
+    
+    .fc-day-header {
+    text-transform: uppercase;
+    font-size: 14px;
+    background:rgb(193, 190, 190);
+    color: #366fa0;
+    font-weight: 500;
+    border: none !important;
+}
+
+thead tr.fc-first{
+	border: none !important;
+}
