--- a/WebContent/vista/portal/eventos.zul
+++ b/WebContent/vista/portal/eventos.zul
@@ -1,4 +1,4 @@
-<?page title="FANCA - Contáctanos" contentType="text/html;charset=UTF-8"?>
+<?page title="FANCA - Eventos" contentType="text/html;charset=UTF-8"?>
 <?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
 <?link href="/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/materialize_v0.97.5/css/materialize.min.css" rel="stylesheet" type="text/css"?>
@@ -15,28 +15,118 @@
 <?script src="/resources/bootstrap/js/bootstrap.js"?>
 <?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
 
+<?link href="/resources/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"?>
+
+<?script src="/resources/fullcalendar/fullcalendar.min.js"?>
+
+
 <?script src="/resources/js/shorcut.js"?>
 <?script src="/resources/js/fullScreenApi.js"?>
 <?script src="/resources/js/index.js"?>
 <zk xmlns:n="native" xmlns:w="client">
+
 	<include src="navbar.zul"></include>
-	
+
 	<div sclass="container-fluid">
-		<div class="cinta">
-		</div>
+		<div class="cinta"></div>
 	</div>
 	<div class="container-fluid" style="Background-color: #F0F2DC;">
 		<div class="row" style="margin-bottom: 0;">
 			<div class="titulo center-align">
 				<n:h4>Eventos</n:h4>
 			</div>
-			<div class="center-align">
-				<n:img class="responsive-img" src="/SmileWebApp/imagenes/LOGO54.png" width="500px" height="500px" style="margin-bottom: 50px;"></n:img>	
+
+			<div class="col-md-2"></div>
+			<div class="col-md-8  "
+				style="padding-bottom: 20px;background-color: #428bca !important;">
+				<n:div id='calendar'></n:div>
 			</div>
+			<div class="col-md-2"></div>
+
 		</div>
 	</div>
 	<div class="center-align imagen">
-		<n:img class="responsive-img" src="/SmileWebApp/imagenes/portal/img-ninos.png"></n:img>	
+		<n:img class="responsive-img"
+			src="/SmileWebApp/imagenes/portal/img-ninos.png">
+		</n:img>
 	</div>
 	<include src="/vista/portal/footer.zul"></include>
+	<n:script type="text/javascript">
+    $('#calendar').fullCalendar({
+      eventClick: function(calEvent, jsEvent, view) {
+
+        },
+        header: {
+          left: '  today,   next',
+          center: 'title',
+          right: 'prev,   month,basicWeek'
+        },
+
+        defaultDate: Date(),
+        editable: false,
+        eventLimit: true, // allow "more" link when too many events
+events: [
+          {
+            title: 'BINGO',
+            start: '2016-07-01',
+            backgroundColor: '#d9eb52',
+			textColor: '#87796f'
+          },
+          {
+            title: 'CARRERA 15KILOMETROS',
+            start: '2016-08-12',
+            end: '2016-07-12',
+            backgroundColor: '#f2eb16',
+			textColor: '#87796f'
+          },
+          {
+            id: 9,
+            title: 'BAILOTERAPIA  ',
+            start: '2016-07-15T16:00:00',
+            backgroundColor: '#f2eb16',
+			textColor: '#87796f'
+          },
+          {
+            id: 999,
+            title: '  2DA CARRERA 10K Y CAMINATA 6K FANCA ',
+            start: '2016-07-19T16:00:00',
+            backgroundColor: '#f2eb16',
+			textColor: '#87796f'
+
+          },
+          {
+            title: 'BINGO',
+            start: '2017-01-28',
+            end: '2017-01-28'
+          },
+          {
+            id: 991,
+            title: 'EXPOFANCA',
+            start: '2017-03-24T16:00:00'
+          },
+          {
+            id: 991,
+            title: 'JORNADA POR LA VIDA Y LA BELLEZA ',
+            start: '2017-04-30T16:00:00'
+          },
+          {
+            title: 'TALLERES DE TEJIDO',
+            url: 'http://google.com/',
+            start: '2017-06-04',
+            backgroundColor: '#f2eb16',
+			textColor: '#87796f'
+          },
+          {
+            title: 'EXPOFANCA',
+            start: '2017-07-06',
+          }
+        ],
+    selectable: true,
+    select: function(start, end, allDay) {
+
+
+               }
+
+});
+	</n:script>
 </zk>
