diseño del login listo ya esta enlazado con el contralador login

--- a/WebContent/resources/css/portal/login.css
+++ b/WebContent/resources/css/portal/login.css
@@ -1,7 +1,14 @@
 .titulo {
-	    color: #3B85A1;
+	color: #3B85A1;
 }
 
-.titulo > span {
-	       font-weight: bold;
+.titulo>span {
+	font-weight: bold;
+}
+
+.linea {
+	width: 100%;
+	background-color: #D44354;
+	height: 20px;
+	margin-top: -40px;
 }
