--- a/WebContent/resources/owl-carousel/owl.theme.css
+++ b/WebContent/resources/owl-carousel/owl.theme.css
@@ -21,7 +21,7 @@
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	border-radius: 30px;
-	background: #ffffff;
+	background: transparent !important;
 	filter: Alpha(Opacity=50);/*IE7 fix*/
 	opacity: 0.5;
 }
