--- a/WebContent/vista/portal/comunidadMain.zul
+++ b/WebContent/vista/portal/comunidadMain.zul
@@ -8,7 +8,6 @@
 <?link href="/resources/css/loading.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/animate.css" rel="stylesheet" type="text/css"?>
 <?link href="/assets/seguridad/css/ultimasSesionesActivas.zul.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/galeria.css" rel="stylesheet" type="text/css"?>
 
 <?link href="/resources/css/portal/main.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/navbar.css" rel="stylesheet" type="text/css"?>
@@ -16,11 +15,16 @@
 <?link href="/resources/css/portal/eventosMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/participaMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
+<?link href="/resources/css/portal/noticiasMain.css" rel="stylesheet" type="text/css"?>
 
+
+<?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css"?>
 
 <?script src="/resources/owl-carousel/owl.carousel.js"?>
+
+
 
 <?script src="/resources/bootstrap/js/bootstrap.js"?>
 <?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
@@ -30,11 +34,60 @@
 <?script src="/resources/js/index.js"?>
 
 <zk xmlns:n="native" xmlns:w="client">
-	<include src="/vista/portal/navbar.zul"></include>
-	<include src="/vista/portal/sliderOrganizacion.zul"></include>
-	<include src="/vista/portal/conocenosMain.zul"></include>
-	<include src="/vista/portal/estructuraOrganizacional.zul"></include>
-	<include src="/vista/portal/valores.zul"></include>
-	<include src="/vista/portal/descargables.zul"></include>
-	<include src="/vista/portal/footer.zul"></include>
+
+	<style>
+		.comunidad .row { margin-bottom: 0; }
+
+		.comunidad h4 { background: #87796f; color: #ffffff; margin: 0;
+		padding: 15px 0; }
+
+		.comunidad .seccion { background:
+		url("../../../imagenes/portal/fondo-body2.png") no-repeat;
+		height:auto; padding: 30px; }
+
+		.seccion .fotos { text-align: center; width: 80%; }
+
+		.comunidad .seccion img { height: auto; width: auto; border:
+		none }
+	</style>
+
+	<div class="container-fluid comunidad">
+		<div class="row">
+			<n:h4>COMUNIDAD ACTIVA</n:h4>
+			<div class="col s12 seccion">
+				<div class="row text-center ">
+					<div class="col s4 text-center">
+						<div sclass="row">
+							<image src="/imagenes/portal/medalla.png">
+							</image>
+						</div>
+						<div sclass="row" style="margin-top:10px">
+							<label sclass="subtitulo " style="color:#F26B7A">Ana Matheus</label>
+						</div><!-- 							<image src="/imagenes/portal/foto1.jpg" height="100px" width="100px" sclass="circle responsive-img"> -->
+						<!-- 							</image> -->
+					</div>
+					<div class="col s4 text-center">
+						<div sclass="row">
+							<image src="/imagenes/portal/medalla.png">
+							</image>
+						</div>
+						<div sclass="row" style="margin-top:10px">
+							<label sclass="subtitulo " style="color:#F26B7A">Ana Matheus</label>
+						</div>
+
+					</div>
+					<div class="col s4 text-center">
+						<div sclass="row">
+							<image src="/imagenes/portal/medalla.png">
+							</image>
+						</div>
+						<div sclass="row" style="margin-top:10px">
+							<label sclass="subtitulo " style="color:#F26B7A">Ana Matheus</label>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
 </zk>
