--- a/WebContent/vista/portal/estructuraOrganizacional.zul
+++ b/WebContent/vista/portal/estructuraOrganizacional.zul
@@ -17,48 +17,61 @@
 <?script src="resources/js/index.js"?>
 
 
-	<zk xmlns:n="native" xmlns:w="client">
-		<div align="center" style="width: 100%; height: 64px; background-color: #8AC7DE;">
-	    	<n:h5 style="padding-top: 18px; color: #ffffff;" >ESTRUCTURA ORGANIZACIONAL</n:h5>
-		</div>
-		<n:br>
-		</n:br>
-		
-		<div class="container-fluid galeria"  >
-			<div class="row">				
-				<div class="col-xs-12 fotos">
-					<div class="col-xs-6" align="center">
-						<div style="border-color: #ffffff">
-							<image class="img-responsive center-block" src="/imagenes/organigrama.png" width="300px" height="300px"> </image>
-						</div>
-					</div>
-					<div class="col-xs-6" align="center">
-						<div style="border-color: #ffffff">
-							<n:p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-								 sed eiusmod tempor incidunt ut labore et dolore magna aliqua. 
-								 Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-								 laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure 
-								 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-								 Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia 
-								 deserunt mollit anim id est laborum.
-								 <n:br> </n:br>
-								 <n:br> </n:br>
-								 Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-								 sed eiusmod tempor incidunt ut labore et dolore magna aliqua. 
-								 Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-								 laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure 
-								 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-								 Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia 
-								 deserunt mollit anim id est laborum.</n:p>
-						</div>
+<zk xmlns:n="native" xmlns:w="client">
+	<div align="center"
+		style="width: 100%; height: 64px; background-color: #8AC7DE;">
+		<n:h5 style="padding-top: 18px; color: #ffffff;">
+			ESTRUCTURA ORGANIZACIONAL
+		</n:h5>
+	</div>
+	<n:br></n:br>
+
+	<div class="container-fluid galeria">
+		<div class="row">
+			<div class="col-xs-12 fotos">
+				<div class="col-xs-6" align="center">
+					<div style="border-color: #ffffff">
+						<image class="img-responsive center-block"
+							src="/imagenes/organigrama.png" width="300px" height="300px">
+						</image>
 					</div>
 				</div>
-			</div>				
+				<div class="col-xs-6" align="center">
+					<div style="border-color: #ffffff">
+						<n:p style="text-align: justify">
+							Lorem ipsum dolor sit amet, consectetur
+							adipiscing elit, sed eiusmod tempor incidunt
+							ut labore et dolore magna aliqua. Ut enim ad
+							minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquid ex ea
+							commodi consequat. Quis aute iure
+							reprehenderit in voluptate velit esse cillum
+							dolore eu fugiat nulla pariatur. Excepteur
+							sint obcaecat cupiditat non proident, sunt
+							in culpa qui officia deserunt mollit anim id
+							est laborum.
+							<n:br></n:br>
+							<n:br></n:br>
+							Lorem ipsum dolor sit amet, consectetur
+							adipiscing elit, sed eiusmod tempor incidunt
+							ut labore et dolore magna aliqua. Ut enim ad
+							minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquid ex ea
+							commodi consequat. Quis aute iure
+							reprehenderit in voluptate velit esse cillum
+							dolore eu fugiat nulla pariatur. Excepteur
+							sint obcaecat cupiditat non proident, sunt
+							in culpa qui officia deserunt mollit anim id
+							est laborum.
+						</n:p>
+					</div>
+				</div>
+			</div>
 		</div>
-	</zk>
-		
-	
-		
-				
-			
-	
+	</div>
+</zk>
+
+
+
+
+
