--- a/WebContent/vista/portal/eventosMain.zul
+++ b/WebContent/vista/portal/eventosMain.zul
@@ -47,7 +47,9 @@
 			</div>
 			<div class="col s12">
 	          	<div class="boton text-center">
-        			<button type="button" class="waves-effect waves-light btn">Ver más</button>
+<button class="waves-effect waves-light btn" href="/vista/portal/eventos.zul">
+						ver mas
+					</button>
     			</div>
     		</div>
 		</div>
