--- a/WebContent/vista/portal/main.zul
+++ b/WebContent/vista/portal/main.zul
@@ -16,7 +16,7 @@
 <?link href="/resources/css/portal/participaMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/noticiasMain.css" rel="stylesheet" type="text/css"?>
-
+<?link href="/resources/css/portal/login.css" rel="stylesheet" type="text/css"?>
 
 <?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css"?>
@@ -41,23 +41,183 @@
 				</a>
 			</div>
 			<div>
-				<a href="#conocenos" sclass="icon" iconSclass="fa fa-bank "></a>
+				<a href="#conocenos" sclass="icon"
+					iconSclass="fa fa-bank ">
+					<span>Organización</span>
+				</a>
 			</div>
 			<div>
-				<a href="#galeria" sclass="icon" iconSclass="fa fa-picture-o"></a>
+				<a href="#galeria" sclass="icon"
+					iconSclass="fa fa-picture-o">
+					<span>Galería</span>
+				</a>
 			</div>
 			<div>
-				<a href="#" sclass="icon" iconSclass="fa fa-user"></a>
+				<a href="#eventos" sclass="icon"
+					iconSclass="fa fa-picture-o">
+					<span>Eventos</span>
+				</a>
+				
 			</div>
 			<div>
-				<a href="#" sclass="icon" iconSclass="fa fa-user"></a>
+				<a href="#comunidad" sclass="icon"
+					iconSclass="fa fa-user">
+					<span>Comunidad</span>
+				</a>
+				
 			</div>
 		</div>
 	</div>
+	<style>
+		.loginNone{ display: none !important;
+ -webkit-transition:display, 0.5s linear;
+    -moz-transition: display, 0.5s linear;
+    -ms-transition: display, 0.5s linear;
+    -o-transition: display, 0.5s linear;
+    transition: display, 0.5s linear;
+		}
+		
+		.login{
+			display: block !important;
+			
+			 -webkit-transition: display, 0.5s linear;
+    -moz-transition: display, 0.5s linear;
+    -ms-transition: display, 0.5s linear;
+    -o-transition: display, 0.5s linear;
+    transition: display, 0.5s linear;
+		}
+	</style>
+	<div sclass="page-content page-content-main"
+		apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('lights.smile.login.Login')">
+		<div apply="karen.core.crux.session.check.CheckLogin"
+			style="display: none;">
+		</div>
+		<div id="login"
+			sclass="text-center container  org-contenedor-contenido row col 12 login">
 
+			<div sclass="col s4">
+
+				<div class="row"
+					style="margin-right:6px; padding-top: 15px;">
+					<div sclass="col s12 titulo">
+						<label value="Ingresa con:"></label>
+					</div>
+
+				</div>
+				<div class="row"
+					style="margin-right:2px; margin-left:2px">
+					<div sclass="row">
+						<div class="input-field col s12">
+							<n:label for="nombres">
+								Nombres Usuario:
+							</n:label>
+							<textbox id="nombres" type="text"
+								value="@bind(vm.usuario.correo)" onOK="@command('login')">
+							</textbox>
+						</div>
+						<div class="input-field col s12">
+							<n:label for="apellidos">
+								Contraseña:
+							</n:label>
+							<textbox id="apellidos" type="password"
+								value="@bind(vm.usuario.clave)" onOK="@command('login')">
+							</textbox>
+							<checkbox checked=""
+								style="margin-left: 53px;">
+							</checkbox>
+							<div class="input-field col s12">
+								<n:label for="Recuerdame"
+									style="margin-left: 177px;
+    margin-top: -58px;">
+									Recordarme
+								</n:label>
+
+							</div>
+						</div>
+
+					</div>
+				</div>
+				<div sclass="col s4">
+
+
+
+					<div id="divButtonsForm" sclass="row">
+						<div class="col s12 div-buttons-form z-div">
+							<button type="button" id="nEMQo3"
+								iconSclass="" class="indigo waves-effect waves-light btn"
+								style="background-color: #3B85A1 !important; margin-top: -65px;"
+								onClick="@command('login')">
+								INICIAR SESIÓN
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div sclass="col s4">
+				<div class="row"
+					style="margin-left:6px; padding-top: 15px;">
+					<div sclass="col s12 titulo">
+						<label value="¿Olvidaste tu contraseña?"></label>
+					</div>
+					<div id="divButtons" sclass="row">
+
+						<div class="col s12 div-buttons-form z-div">
+							<separator height="15px"></separator>
+							<button type="button" iconSclass=""
+								class="indigo waves-effect waves-light btn"
+								style="background-color: #3B85A1 !important;">
+								RECUPERAR
+							</button>
+						</div>
+					</div>
+
+
+					<div sclass="col s12 titulo">
+						<label value="¿Tienes alguna duda?"></label>
+						<separator height="20px"></separator>
+						<div style="color: black;">
+							<label
+								value="Te proporcionamos una manera sencilla de enteder todo el entorno web">
+							</label>
+						</div>
+						<separator height="25px"></separator>
+						<div class="col s12 div-buttons-form z-div">
+							<button type="button" iconSclass=""
+								class="indigo waves-effect waves-light btn"
+								style="background-color: #3B85A1 !important;">
+								AYUDA
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div sclass="col s4">
+				<div class="row" style="margin-left:6px">
+					<div sclass="col s12 tituloSeccion">
+
+						<image src="/imagenes/smiles_web.png"
+							style="max-width: 175px;
+    max-height: 175px;">
+						</image>
+						<div style="text-align: justify;">
+							<label
+								value="Una mañana, tras un sueño intranquilo, Gregorio Samsa se despertó convertido en un monstruoso insecto. Estaba echado de espaldas sobre un duro caparazón y, al alzar la cabeza, vio su vientre convexo y oscuro, surcado por curvadas callosidades, sobre el que casi no se aguantaba la ">
+							</label>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+	<div sclass="linea"></div>
 	<include src="/vista/portal/navbar.zul"></include>
 	<div class="container-fluid">
-		<image class="responsive-img" src="/imagenes/portal/web-banner.png"></image>
+		<image class="responsive-img"
+			src="/imagenes/portal/web-banner.png">
+		</image>
 	</div>
 	<include src="/vista/portal/noticiasMain.zul"></include>
 	<n:div id="conocenos">
@@ -66,7 +226,7 @@
 	<n:div id="galeria">
 		<include src="/vista/portal/galeriaMain.zul"></include>
 	</n:div>
-	<div class="container-fluid"  >
+	<div id="eventos" class="container-fluid">
 		<div class="row">
 			<div class="col s6 eventos">
 				<include src="/vista/portal/eventosMain.zul"></include>
@@ -75,6 +235,20 @@
 				<include src="/vista/portal/participaMain.zul"></include>
 			</div>
 		</div>
+	</div>
+	<div id="twitter" class="container-fluid">
+		<div class="row">
+			<div class="col s12" style="padding:0px">
+				<include src="/vista/portal/twitterMain.zul"></include>
+			</div>
+		</div>
+	</div>
+	<div id="comunidad" class="container-fluid">
+		<div class="row">
+			<div class="col s12" style="padding:0px">
+				<include src="/vista/portal/comunidadMain.zul"></include>
+			</div>
+		</div> 	
 	</div>
 	<include src="/vista/portal/footer.zul"></include>
 </zk>
