--- a/WebContent/vista/portal/sliderOrganizacion.zul
+++ b/WebContent/vista/portal/sliderOrganizacion.zul
@@ -12,6 +12,7 @@
 <?link href="/resources/css/portal/main.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/navbar.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/galeriaMain.css" rel="stylesheet" type="text/css"?>
+<?link href="/resources/css/portal/galeria.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/eventosMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/participaMain.css" rel="stylesheet" type="text/css"?>
 <?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
@@ -21,8 +22,6 @@
 
 <?script src="/resources/owl-carousel/owl.carousel.js"?>
 
-
-
 <?script src="/resources/bootstrap/js/bootstrap.js"?>
 <?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
 
@@ -30,59 +29,9 @@
 <?script src="/resources/js/fullScreenApi.js"?>
 <?script src="/resources/js/index.js"?>
 
-<zk xmlns:n="native" xmlns:w="client">
-<style>
-
-#owlDemo .item{
-  display: block;
-  padding: 30px 10px;
-  margin: 5px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  text-align: justify;
-}
-.owl-theme .owl-controls .owl-buttons div {
-  padding: 5px 40px;
-}
- 
-.owl-theme .owl-buttons span{
-  margin-top: 2px;
-}
- 
-//To move navigation buttons outside use these settings:
- 
-.owl-theme .owl-controls .owl-buttons div {
-  position: absolute;
-}
- 
-.owl-theme .owl-controls .owl-buttons .owl-prev{
-  left: -50px;
-  top: 50px; 
-      position: absolute;
-}
- 
-.owl-theme .owl-controls .owl-buttons .owl-next{
-  right: -118px;
-  top: 45px;
-      position: absolute;
-}
-
-.owl-carousel {
-    display: none;
-    position: relative;
-    width: 95%;
-    -ms-touch-action: pan-y;
-    margin-left: 1%;
-
- 
-
-	</style>
-	
-	
-	<div sclass="container">
+<zk xmlns:n="native" xmlns:w="client">	
 		
-	<div sclass="row">
+	<div sclass="row" style="margin:0">
 		<n:div id="owlDemo" sclass="owl-carousel owl-theme">
 			<div sclass="item">
 				
@@ -98,12 +47,9 @@
 					<image src="../../imagenes/slider3.png"></image>
 				</div>
 			
-
 		</n:div>
 		
-		
 	</div>
-</div>
 	
 <n:script type="text/javascript">
 		
@@ -116,9 +62,9 @@ $(document).ready(function() {
       slideSpeed : 300,
       paginationSpeed : 400,
       singleItem:true,
-navigationText: [
-      '<label sclass='fa-user fa'></label>',
-    '<label sclass='fa-user fa'></label>'
+	navigationText: [
+      '<span sclass="fa fa-chevron-left"></span>',
+    '<span sclass="fa fa-chevron-right"></span>'
       ],
       // "singleItem:true" is a shortcut for:
       // items : 1, 
@@ -128,6 +74,7 @@ navigationText: [
       // itemsMobile : false
 
   });
+  
 
 });
  
@@ -150,4 +97,32 @@ navigationText: [
 			LA ORGANIZACION
 		</n:h5>
 	</div>	
+	
+<n:script type="text/javascript">
+$(document).ready(function() {
+
+  $('#owlDemo').owlCarousel({
+
+      navigation : true, // Show next and prev buttons
+      slideSpeed : 300,
+      paginationSpeed : 400,
+      singleItem:true,
+	navigationText: [
+      '<span sclass="fa fa-chevron-left"></span>',
+    '<span sclass="fa fa-chevron-right"></span>'
+      ],
+      // "singleItem:true" is a shortcut for:
+      // items : 1, 
+      // itemsDesktop : false,
+      // itemsDesktopSmall : false,
+      // itemsTablet: false,
+      // itemsMobile : false
+
+  });
+ 
+
+});
+ 	
+</n:script>
+	
 </zk>
