menu y footer fijos para conocenos

--- a/WebContent/vista/portal/navbar.zul
+++ b/WebContent/vista/portal/navbar.zul
@@ -25,7 +25,7 @@
 				target="_self" href="" label="INICIO" onClick="@command('inicio')">
 			</a>
 			<a sclass="grisFanca labelNavbar hvr-underline-from-center"
-				target="_self" href="/vista/portal/conocenosWeb.zul" label="CONÓCENOS">
+				target="_self" href="" label="CONÓCENOS" onClick="@command('conocenos')">
 			</a>
 
 			<a sclass="verdeFanca labelNavbar hvr-underline-from-center"
