link de estilos del main solo en el main.zul del portal

--- a/WebContent/vista/portal/main.zul
+++ b/WebContent/vista/portal/main.zul
@@ -1,4 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
+<n:link href="resources/css/portal/main.css" rel="stylesheet" type="text/css"></n:link>
 	<div class="social">
 		<div style="padding: 0px;">
 			<div>
