Modificacion de Contactanos

--- a/WebContent/vista/portal/contactanos.zul
+++ b/WebContent/vista/portal/contactanos.zul
@@ -1,35 +1,17 @@
-<?page title="FANCA - Contáctanos" contentType="text/html;charset=UTF-8"?>
-<?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
-<?link href="/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/materialize_v0.97.5/css/materialize.min.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/theme.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/karen.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/loading.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/animate.css" rel="stylesheet" type="text/css"?>
-<?link href="/assets/seguridad/css/ultimasSesionesActivas.zul.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/navbar.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/contactanos.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
-<?script src="/resources/bootstrap/js/bootstrap.js"?>
-<?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
-
-<?script src="/resources/js/shorcut.js"?>
-<?script src="/resources/js/fullScreenApi.js"?>
-<?script src="/resources/js/index.js"?>
 <zk xmlns:n="native" xmlns:w="client">
+
+<n:link href="resources/css/portal/contactanos.css" rel="stylesheet" type="text/css"></n:link>
+
 	<div class="org-contenedor-banner banner-organizacion">
 		<div>
-			<div
-				class="org-contenedor-banner org-contenedor-banner-img">
+			<div class="org-contenedor-banner org-contenedor-banner-img">
 				<iframe sclass="contact-map"
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15714.297497096071!2d-69.3126340524231!3d10.05193704663637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcfb1348846c590da!2sFundacion+Amigos+del+Ni%C3%B1o+con+cancer+lara!5e0!3m2!1ses!2sve!4v1468198039346">
 				</iframe>
 			</div>
 		</div>
 	</div>
-	<div
-		sclass="text-center container  org-contenedor-contenido row col 12">
+	<div sclass="cont text-center container  org-contenedor-contenido row col 12">
 		
 		<div sclass="col s4">
 
@@ -47,19 +29,19 @@
 		                <n:br></n:br>
 		                </div>
 		                
-		                <n:h6 class="textoContacto">Fax</n:h6>
+		                <n:h6 class="textoContacto">Fax:</n:h6>
 		                <div class="textoDatos">
 	                	(0251)2337004<n:br></n:br>
 		                <n:br></n:br>
 		                </div>
 		                
-		                <n:h6 class="textoContacto">Correo electrónico</n:h6>
+		                <n:h6 class="textoContacto">Correo electrónico:</n:h6>
 		                <div class="textoDatos">
 	                	fancalara@gmail.com<n:br></n:br>
 		                <n:br></n:br>
 		                </div>
 		                
-		                <n:h6 class="textoContacto">Ubicación</n:h6>
+		                <n:h6 class="textoContacto">Ubicación:</n:h6>
 		                <div class="textoDatos">
 	                	Urbanización "La Concordia" Vereda 6<n:br></n:br>
 		                Casa #21<n:br></n:br>
@@ -76,15 +58,14 @@
 
 		<div sclass="col s4">
 
-			<div class="row"
-				style="margin-right:2px; margin-left:2px">
+			<div class="row" style="margin-right:2px; margin-left:2px">
 
-				<div sclass="col s12 tituloSeccion">
-					<label value="ESCRÍBENOS UN MENSAJE O COMENTARIO">
+				<div sclass="col s12 tituloSeccion valign-wrapper">
+					<label class="valign" value="ESCRÍBENOS UN MENSAJE">
 					</label>
 				</div>
 				<space height="10px"></space>
-				<div sclass="row">
+				<div sclass="row" style="padding: 0 12px;">
 					<div class="input-field col s12">
 						<n:label for="nombres">Nombres:</n:label>
 						<textbox id="nombres" type="text"></textbox>
@@ -105,8 +86,7 @@
 					</div>
 					<div class="input-field col s12">
 						<n:label for="mensaje">Mensaje:</n:label>
-						<textbox id="mensaje" type="text"
-							sclass="materialize-textarea" multiline="true">
+						<textbox id="mensaje" type="text">
 						</textbox>
 					</div>
 
@@ -115,9 +95,8 @@
 				<div id="divButtonsForm" sclass="row">
 					<div class="col s12 div-buttons-form z-div">
 						<button type="button" id="nEMQo3"
-							iconSclass="fa fa-send-o"
 							class="indigo waves-effect waves-light btn"
-							style="background: #D9EB52 !important; color: #8D826D !important">
+							style="background: #3b85a1 !important; color: #ffffff !important">
 							Enviar
 						</button>
 					</div>
@@ -132,30 +111,29 @@
 				</div>
 				<space height="37px"></space>
 				<div sclass="row">
-					<div class="col s12 contact-holder left-align">
+					<div class="col s12 contact-holder">
 					
 		                <div class="containerRedes twitter valign-wrapper">
-							<div class="valign" style="margin-left: 10px;">
-								<n:img class="responsive-img" src="/SmileWebApp/imagenes/portal/twitter.png" style="margin-right: 50px;"></n:img>
+							<div class="valign-wrapper">
+								<n:img class="responsive-img valign" src="/SmileWebApp/imagenes/portal/twitter.png"></n:img>
 							</div>
-							<n:b>twitter</n:b>
+							<n:span class="valign center-block">twitter</n:span>
 						</div>
 						
 						<div class="containerRedes facebook valign-wrapper">
-							<div class="valign" style="margin-left: 10px;">
-								<n:img class="responsive-img" src="/SmileWebApp/imagenes/portal/facebook.png" style="margin-right: 50px;"></n:img>
+							<div class="valign-wrapper">
+								<n:img class="responsive-img valign" src="/SmileWebApp/imagenes/portal/facebook.png"></n:img>
 							</div>
-							<n:b>facebook</n:b>
+							<n:span class="valign center-block">facebook</n:span>
 						</div>
 						
 						<div class="containerRedes instagram valign-wrapper">
-							<div class="valign" style="margin-left: 10px;">
-								<n:img class="responsive-img" src="/SmileWebApp/imagenes/portal/instagram.png" style="margin-right: 50px;"></n:img>
+							<div class="valign-wrapper">
+								<n:img class="responsive-img valign" src="/SmileWebApp/imagenes/portal/instagram.png"></n:img>
 							</div>
-							<n:b>instagram</n:b>
+							<n:span class="valign center-block">instagram</n:span>
 						</div>
-		                
-		                
+		              		                
             		</div>
 				</div>
 			</div>
