--- a/WebContent/resources/css/portal/contactanos.css
+++ b/WebContent/resources/css/portal/contactanos.css
@@ -1,7 +1,11 @@
+body {
+	background-color: #594e46;
+}
+
 .contact-map {
 	max-width: 100%;
 	width: 1680px;
-	height: 555px;
+	height: 465px;
 	padding-top: 0px;
 }
 
@@ -28,27 +32,10 @@
 	background-repeat: no-repeat;
 }
 
-.contact-map {
-	max-width: 100%;
-	width: 1680px;
-	height: 555px;
-	padding-top: 0px;
-}
-
 .banner-organizacion {
 	height: 200px;
 	width: 100%;
 	position: relative !important;
-}
-
-.org-contenedor-contenido {
-	z-index: 2;
-	top: 33em;
-	-webkit-box-shadow: 0 0 1px #999;
-	-moz-box-shadow: 0 0 1px #999;
-	box-shadow: 0 0 5px 1px #999;
-	padding: 0px;
-	background: #F0F2DC !important;
 }
 
 .org-contenedor-banner {
@@ -89,6 +76,7 @@
 .tituloSeccion {
 	background: #F26B7A !important;
 	padding: 0px 10px;
+	height: 48px;
 }
 
 .tituloSeccion span {
@@ -100,33 +88,48 @@
 	font-family: 'Roboto', sans-serif;
 	font-size: 15px !important;
 	font-weight: 500;
-	color: #87796f;
+	color: #87796F;
 }
 
 .textoDatos {
-	color: #87796f;
+	color: #594E46;
+}
+
+.input-field label {
+     color: #594E46;
+}
+
+.input-field input[type=text] {
+     border-bottom: 1px solid #8AC7DE;
+}
+
+.input-field input[type=text]:focus {
+     border-bottom: 1px solid #8AC7DE;
 }
 
 .twitter {
 	background-color: #55acee;
-	margin-top: 50px;
-	margin-bottom: 35px;
+	margin: 60px auto 35px auto;
 }
 
 .facebook {
 	background-color: #3B5998;
-	margin-top: 50px;
-	margin-bottom: 35px;
+	margin: 0px auto 35px auto;
 }
 
 .instagram {
 	background-color: #125688;
-	margin-top: 50px;
+	margin: 0px auto 35px auto;
 }
 
 .containerRedes {
 	color: white;
-	height: 44px;
-	width: 265px;
+	height: 45px;
+	width: 270px;
 	font-size: 20px;
+	padding-left: 15px;
+}
+
+.cont {
+	margin-top: -140px;
 }
